// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders components/segmented/demo/basic.tsx extend context correctly 1`] = `
<div
  class="ant-segmented"
>
  <div
    class="ant-segmented-group"
  >
    <label
      class="ant-segmented-item ant-segmented-item-selected"
    >
      <input
        checked=""
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Daily"
      >
        Daily
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Weekly"
      >
        Weekly
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Monthly"
      >
        Monthly
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Quarterly"
      >
        Quarterly
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Yearly"
      >
        Yearly
      </div>
    </label>
  </div>
</div>
`;

exports[`renders components/segmented/demo/basic.tsx extend context correctly 2`] = `[]`;

exports[`renders components/segmented/demo/block.tsx extend context correctly 1`] = `
<div
  class="ant-segmented ant-segmented-block"
>
  <div
    class="ant-segmented-group"
  >
    <label
      class="ant-segmented-item ant-segmented-item-selected"
    >
      <input
        checked=""
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="123"
      >
        123
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="456"
      >
        456
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="longtext-longtext-longtext-longtext"
      >
        longtext-longtext-longtext-longtext
      </div>
    </label>
  </div>
</div>
`;

exports[`renders components/segmented/demo/block.tsx extend context correctly 2`] = `[]`;

exports[`renders components/segmented/demo/componentToken.tsx extend context correctly 1`] = `
<div
  class="ant-segmented"
>
  <div
    class="ant-segmented-group"
  >
    <label
      class="ant-segmented-item ant-segmented-item-selected"
    >
      <input
        checked=""
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Daily"
      >
        Daily
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Weekly"
      >
        Weekly
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Monthly"
      >
        Monthly
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Quarterly"
      >
        Quarterly
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Yearly"
      >
        Yearly
      </div>
    </label>
  </div>
</div>
`;

exports[`renders components/segmented/demo/componentToken.tsx extend context correctly 2`] = `[]`;

exports[`renders components/segmented/demo/controlled.tsx extend context correctly 1`] = `
<div
  class="ant-segmented"
>
  <div
    class="ant-segmented-group"
  >
    <label
      class="ant-segmented-item ant-segmented-item-selected"
    >
      <input
        checked=""
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Map"
      >
        Map
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Transit"
      >
        Transit
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
        title="Satellite"
      >
        Satellite
      </div>
    </label>
  </div>
</div>
`;

exports[`renders components/segmented/demo/controlled.tsx extend context correctly 2`] = `[]`;

exports[`renders components/segmented/demo/controlled-two.tsx extend context correctly 1`] = `
Array [
  <div
    class="ant-segmented"
  >
    <div
      class="ant-segmented-group"
    >
      <label
        class="ant-segmented-item ant-segmented-item-selected"
      >
        <input
          checked=""
          class="ant-segmented-item-input"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="AND"
        >
          AND
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="OR"
        >
          OR
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="NOT"
        >
          NOT
        </div>
      </label>
    </div>
  </div>,
    ,
  <div
    class="ant-segmented"
  >
    <div
      class="ant-segmented-group"
    >
      <label
        class="ant-segmented-item ant-segmented-item-selected"
      >
        <input
          checked=""
          class="ant-segmented-item-input"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="AND"
        >
          AND
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="OR"
        >
          OR
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="NOT"
        >
          NOT
        </div>
      </label>
    </div>
  </div>,
]
`;

exports[`renders components/segmented/demo/controlled-two.tsx extend context correctly 2`] = `[]`;

exports[`renders components/segmented/demo/custom.tsx extend context correctly 1`] = `
<div
  class="ant-space ant-space-vertical ant-space-gap-row-small ant-space-gap-col-small"
>
  <div
    class="ant-space-item"
  >
    <div
      class="ant-segmented"
    >
      <div
        class="ant-segmented-group"
      >
        <label
          class="ant-segmented-item ant-segmented-item-selected"
        >
          <input
            checked=""
            class="ant-segmented-item-input"
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
          >
            <div
              style="padding: 4px;"
            >
              <span
                class="ant-avatar ant-avatar-circle ant-avatar-image"
              >
                <img
                  src="https://xsgames.co/randomusers/avatar.php?g=pixel"
                />
              </span>
              <div>
                User 1
              </div>
            </div>
          </div>
        </label>
        <label
          class="ant-segmented-item"
        >
          <input
            class="ant-segmented-item-input"
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
          >
            <div
              style="padding: 4px;"
            >
              <span
                class="ant-avatar ant-avatar-circle"
                style="background-color: rgb(245, 106, 0);"
              >
                <span
                  class="ant-avatar-string"
                  style="transform: scale(1) translateX(-50%);"
                >
                  K
                </span>
              </span>
              <div>
                User 2
              </div>
            </div>
          </div>
        </label>
        <label
          class="ant-segmented-item"
        >
          <input
            class="ant-segmented-item-input"
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
          >
            <div
              style="padding: 4px;"
            >
              <span
                class="ant-avatar ant-avatar-circle ant-avatar-icon"
                style="background-color: rgb(135, 208, 104);"
              >
                <span
                  aria-label="user"
                  class="anticon anticon-user"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="user"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                    />
                  </svg>
                </span>
              </span>
              <div>
                User 3
              </div>
            </div>
          </div>
        </label>
      </div>
    </div>
  </div>
  <div
    class="ant-space-item"
  >
    <div
      class="ant-segmented"
    >
      <div
        class="ant-segmented-group"
      >
        <label
          class="ant-segmented-item ant-segmented-item-selected"
        >
          <input
            checked=""
            class="ant-segmented-item-input"
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
          >
            <div
              style="padding: 4px;"
            >
              <div>
                Spring
              </div>
              <div>
                Jan-Mar
              </div>
            </div>
          </div>
        </label>
        <label
          class="ant-segmented-item"
        >
          <input
            class="ant-segmented-item-input"
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
          >
            <div
              style="padding: 4px;"
            >
              <div>
                Summer
              </div>
              <div>
                Apr-Jun
              </div>
            </div>
          </div>
        </label>
        <label
          class="ant-segmented-item"
        >
          <input
            class="ant-segmented-item-input"
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
          >
            <div
              style="padding: 4px;"
            >
              <div>
                Autumn
              </div>
              <div>
                Jul-Sept
              </div>
            </div>
          </div>
        </label>
        <label
          class="ant-segmented-item"
        >
          <input
            class="ant-segmented-item-input"
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
          >
            <div
              style="padding: 4px;"
            >
              <div>
                Winter
              </div>
              <div>
                Oct-Dec
              </div>
            </div>
          </div>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/segmented/demo/custom.tsx extend context correctly 2`] = `[]`;

exports[`renders components/segmented/demo/disabled.tsx extend context correctly 1`] = `
<div
  class="ant-space ant-space-vertical ant-space-gap-row-small ant-space-gap-col-small"
>
  <div
    class="ant-space-item"
  >
    <div
      class="ant-segmented ant-segmented-disabled"
    >
      <div
        class="ant-segmented-group"
      >
        <label
          class="ant-segmented-item ant-segmented-item-selected ant-segmented-item-disabled"
        >
          <input
            checked=""
            class="ant-segmented-item-input"
            disabled=""
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
            title="Map"
          >
            Map
          </div>
        </label>
        <label
          class="ant-segmented-item ant-segmented-item-disabled"
        >
          <input
            class="ant-segmented-item-input"
            disabled=""
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
            title="Transit"
          >
            Transit
          </div>
        </label>
        <label
          class="ant-segmented-item ant-segmented-item-disabled"
        >
          <input
            class="ant-segmented-item-input"
            disabled=""
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
            title="Satellite"
          >
            Satellite
          </div>
        </label>
      </div>
    </div>
  </div>
  <div
    class="ant-space-item"
  >
    <div
      class="ant-segmented"
    >
      <div
        class="ant-segmented-group"
      >
        <label
          class="ant-segmented-item ant-segmented-item-selected"
        >
          <input
            checked=""
            class="ant-segmented-item-input"
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
            title="Daily"
          >
            Daily
          </div>
        </label>
        <label
          class="ant-segmented-item ant-segmented-item-disabled"
        >
          <input
            class="ant-segmented-item-input"
            disabled=""
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
            title="Weekly"
          >
            Weekly
          </div>
        </label>
        <label
          class="ant-segmented-item"
        >
          <input
            class="ant-segmented-item-input"
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
            title="Monthly"
          >
            Monthly
          </div>
        </label>
        <label
          class="ant-segmented-item ant-segmented-item-disabled"
        >
          <input
            class="ant-segmented-item-input"
            disabled=""
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
            title="Quarterly"
          >
            Quarterly
          </div>
        </label>
        <label
          class="ant-segmented-item"
        >
          <input
            class="ant-segmented-item-input"
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
            title="Yearly"
          >
            Yearly
          </div>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/segmented/demo/disabled.tsx extend context correctly 2`] = `[]`;

exports[`renders components/segmented/demo/dynamic.tsx extend context correctly 1`] = `
<div
  class="ant-space ant-space-vertical ant-space-gap-row-small ant-space-gap-col-small"
>
  <div
    class="ant-space-item"
  >
    <div
      class="ant-segmented"
    >
      <div
        class="ant-segmented-group"
      >
        <label
          class="ant-segmented-item ant-segmented-item-selected"
        >
          <input
            checked=""
            class="ant-segmented-item-input"
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
            title="Daily"
          >
            Daily
          </div>
        </label>
        <label
          class="ant-segmented-item"
        >
          <input
            class="ant-segmented-item-input"
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
            title="Weekly"
          >
            Weekly
          </div>
        </label>
        <label
          class="ant-segmented-item"
        >
          <input
            class="ant-segmented-item-input"
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
            title="Monthly"
          >
            Monthly
          </div>
        </label>
      </div>
    </div>
  </div>
  <div
    class="ant-space-item"
  >
    <button
      class="ant-btn ant-btn-primary"
      type="button"
    >
      <span>
        Load more options
      </span>
    </button>
  </div>
</div>
`;

exports[`renders components/segmented/demo/dynamic.tsx extend context correctly 2`] = `[]`;

exports[`renders components/segmented/demo/icon-only.tsx extend context correctly 1`] = `
<div
  class="ant-segmented"
>
  <div
    class="ant-segmented-group"
  >
    <label
      class="ant-segmented-item ant-segmented-item-selected"
    >
      <input
        checked=""
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
      >
        <span
          class="ant-segmented-item-icon"
        >
          <span
            aria-label="bars"
            class="anticon anticon-bars"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="bars"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M912 192H328c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 284H328c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 284H328c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM104 228a56 56 0 10112 0 56 56 0 10-112 0zm0 284a56 56 0 10112 0 56 56 0 10-112 0zm0 284a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </span>
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
      >
        <span
          class="ant-segmented-item-icon"
        >
          <span
            aria-label="appstore"
            class="anticon anticon-appstore"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="appstore"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M464 144H160c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V160c0-8.8-7.2-16-16-16zm-52 268H212V212h200v200zm452-268H560c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V160c0-8.8-7.2-16-16-16zm-52 268H612V212h200v200zM464 544H160c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V560c0-8.8-7.2-16-16-16zm-52 268H212V612h200v200zm452-268H560c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V560c0-8.8-7.2-16-16-16zm-52 268H612V612h200v200z"
              />
            </svg>
          </span>
        </span>
      </div>
    </label>
  </div>
</div>
`;

exports[`renders components/segmented/demo/icon-only.tsx extend context correctly 2`] = `[]`;

exports[`renders components/segmented/demo/size.tsx extend context correctly 1`] = `
<div
  class="ant-space ant-space-vertical ant-space-gap-row-small ant-space-gap-col-small"
>
  <div
    class="ant-space-item"
  >
    <div
      class="ant-segmented ant-segmented-lg"
    >
      <div
        class="ant-segmented-group"
      >
        <label
          class="ant-segmented-item ant-segmented-item-selected"
        >
          <input
            checked=""
            class="ant-segmented-item-input"
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
            title="Daily"
          >
            Daily
          </div>
        </label>
        <label
          class="ant-segmented-item"
        >
          <input
            class="ant-segmented-item-input"
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
            title="Weekly"
          >
            Weekly
          </div>
        </label>
        <label
          class="ant-segmented-item"
        >
          <input
            class="ant-segmented-item-input"
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
            title="Monthly"
          >
            Monthly
          </div>
        </label>
        <label
          class="ant-segmented-item"
        >
          <input
            class="ant-segmented-item-input"
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
            title="Quarterly"
          >
            Quarterly
          </div>
        </label>
        <label
          class="ant-segmented-item"
        >
          <input
            class="ant-segmented-item-input"
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
            title="Yearly"
          >
            Yearly
          </div>
        </label>
      </div>
    </div>
  </div>
  <div
    class="ant-space-item"
  >
    <div
      class="ant-segmented"
    >
      <div
        class="ant-segmented-group"
      >
        <label
          class="ant-segmented-item ant-segmented-item-selected"
        >
          <input
            checked=""
            class="ant-segmented-item-input"
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
            title="Daily"
          >
            Daily
          </div>
        </label>
        <label
          class="ant-segmented-item"
        >
          <input
            class="ant-segmented-item-input"
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
            title="Weekly"
          >
            Weekly
          </div>
        </label>
        <label
          class="ant-segmented-item"
        >
          <input
            class="ant-segmented-item-input"
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
            title="Monthly"
          >
            Monthly
          </div>
        </label>
        <label
          class="ant-segmented-item"
        >
          <input
            class="ant-segmented-item-input"
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
            title="Quarterly"
          >
            Quarterly
          </div>
        </label>
        <label
          class="ant-segmented-item"
        >
          <input
            class="ant-segmented-item-input"
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
            title="Yearly"
          >
            Yearly
          </div>
        </label>
      </div>
    </div>
  </div>
  <div
    class="ant-space-item"
  >
    <div
      class="ant-segmented ant-segmented-sm"
    >
      <div
        class="ant-segmented-group"
      >
        <label
          class="ant-segmented-item ant-segmented-item-selected"
        >
          <input
            checked=""
            class="ant-segmented-item-input"
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
            title="Daily"
          >
            Daily
          </div>
        </label>
        <label
          class="ant-segmented-item"
        >
          <input
            class="ant-segmented-item-input"
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
            title="Weekly"
          >
            Weekly
          </div>
        </label>
        <label
          class="ant-segmented-item"
        >
          <input
            class="ant-segmented-item-input"
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
            title="Monthly"
          >
            Monthly
          </div>
        </label>
        <label
          class="ant-segmented-item"
        >
          <input
            class="ant-segmented-item-input"
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
            title="Quarterly"
          >
            Quarterly
          </div>
        </label>
        <label
          class="ant-segmented-item"
        >
          <input
            class="ant-segmented-item-input"
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
            title="Yearly"
          >
            Yearly
          </div>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/segmented/demo/size.tsx extend context correctly 2`] = `[]`;

exports[`renders components/segmented/demo/size-consistent.tsx extend context correctly 1`] = `
<div
  class="ant-space ant-space-vertical ant-space-gap-row-small ant-space-gap-col-small"
>
  <div
    class="ant-space-item"
  >
    <div>
      <div
        class="ant-segmented ant-segmented-lg"
        style="margin-right: 6px;"
      >
        <div
          class="ant-segmented-group"
        >
          <label
            class="ant-segmented-item ant-segmented-item-selected"
          >
            <input
              checked=""
              class="ant-segmented-item-input"
              type="radio"
            />
            <div
              class="ant-segmented-item-label"
              title="Daily"
            >
              Daily
            </div>
          </label>
          <label
            class="ant-segmented-item"
          >
            <input
              class="ant-segmented-item-input"
              type="radio"
            />
            <div
              class="ant-segmented-item-label"
              title="Weekly"
            >
              Weekly
            </div>
          </label>
          <label
            class="ant-segmented-item"
          >
            <input
              class="ant-segmented-item-input"
              type="radio"
            />
            <div
              class="ant-segmented-item-label"
              title="Monthly"
            >
              Monthly
            </div>
          </label>
        </div>
      </div>
      <button
        class="ant-btn ant-btn-primary ant-btn-lg"
        type="button"
      >
        <span>
          Button
        </span>
      </button>
    </div>
  </div>
  <div
    class="ant-space-item"
  >
    <div>
      <div
        class="ant-segmented"
        style="margin-right: 6px;"
      >
        <div
          class="ant-segmented-group"
        >
          <label
            class="ant-segmented-item ant-segmented-item-selected"
          >
            <input
              checked=""
              class="ant-segmented-item-input"
              type="radio"
            />
            <div
              class="ant-segmented-item-label"
              title="Daily"
            >
              Daily
            </div>
          </label>
          <label
            class="ant-segmented-item"
          >
            <input
              class="ant-segmented-item-input"
              type="radio"
            />
            <div
              class="ant-segmented-item-label"
              title="Weekly"
            >
              Weekly
            </div>
          </label>
          <label
            class="ant-segmented-item"
          >
            <input
              class="ant-segmented-item-input"
              type="radio"
            />
            <div
              class="ant-segmented-item-label"
              title="Monthly"
            >
              Monthly
            </div>
          </label>
        </div>
      </div>
      <input
        class="ant-input"
        placeholder="default size"
        style="width: 150px;"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="ant-space-item"
  >
    <div>
      <div
        class="ant-segmented ant-segmented-sm"
        style="margin-right: 6px;"
      >
        <div
          class="ant-segmented-group"
        >
          <label
            class="ant-segmented-item ant-segmented-item-selected"
          >
            <input
              checked=""
              class="ant-segmented-item-input"
              type="radio"
            />
            <div
              class="ant-segmented-item-label"
              title="Daily"
            >
              Daily
            </div>
          </label>
          <label
            class="ant-segmented-item"
          >
            <input
              class="ant-segmented-item-input"
              type="radio"
            />
            <div
              class="ant-segmented-item-label"
              title="Weekly"
            >
              Weekly
            </div>
          </label>
          <label
            class="ant-segmented-item"
          >
            <input
              class="ant-segmented-item-input"
              type="radio"
            />
            <div
              class="ant-segmented-item-label"
              title="Monthly"
            >
              Monthly
            </div>
          </label>
        </div>
      </div>
      <div
        class="ant-select ant-select-sm ant-select-single ant-select-show-arrow"
        style="width: 150px;"
      >
        <div
          class="ant-select-selector"
        >
          <span
            class="ant-select-selection-search"
          >
            <input
              aria-autocomplete="list"
              aria-controls="rc_select_TEST_OR_SSR_list"
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-owns="rc_select_TEST_OR_SSR_list"
              autocomplete="off"
              class="ant-select-selection-search-input"
              id="rc_select_TEST_OR_SSR"
              readonly=""
              role="combobox"
              style="opacity: 0;"
              type="search"
              unselectable="on"
              value=""
            />
          </span>
          <span
            class="ant-select-selection-item"
            title="Lucy"
          >
            Lucy
          </span>
        </div>
        <div
          class="ant-select-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up ant-select-dropdown-placement-bottomLeft"
          style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
        >
          <div>
            <div
              id="rc_select_TEST_OR_SSR_list"
              role="listbox"
              style="height: 0px; width: 0px; overflow: hidden;"
            >
              <div
                aria-label="Lucy"
                aria-selected="true"
                id="rc_select_TEST_OR_SSR_list_0"
                role="option"
              >
                lucy
              </div>
            </div>
            <div
              class="rc-virtual-list"
              style="position: relative;"
            >
              <div
                class="rc-virtual-list-holder"
                style="max-height: 256px; overflow-y: auto;"
              >
                <div>
                  <div
                    class="rc-virtual-list-holder-inner"
                    style="display: flex; flex-direction: column;"
                  >
                    <div
                      aria-selected="true"
                      class="ant-select-item ant-select-item-option ant-select-item-option-active ant-select-item-option-selected"
                      title="Lucy"
                    >
                      <div
                        class="ant-select-item-option-content"
                      >
                        Lucy
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-item-option-state"
                        style="user-select: none;"
                        unselectable="on"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <span
          aria-hidden="true"
          class="ant-select-arrow"
          style="user-select: none;"
          unselectable="on"
        >
          <span
            aria-label="down"
            class="anticon anticon-down ant-select-suffix"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="down"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/segmented/demo/size-consistent.tsx extend context correctly 2`] = `[]`;

exports[`renders components/segmented/demo/with-icon.tsx extend context correctly 1`] = `
<div
  class="ant-segmented"
>
  <div
    class="ant-segmented-group"
  >
    <label
      class="ant-segmented-item ant-segmented-item-selected"
    >
      <input
        checked=""
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
      >
        <span
          class="ant-segmented-item-icon"
        >
          <span
            aria-label="bars"
            class="anticon anticon-bars"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="bars"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M912 192H328c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 284H328c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 284H328c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM104 228a56 56 0 10112 0 56 56 0 10-112 0zm0 284a56 56 0 10112 0 56 56 0 10-112 0zm0 284a56 56 0 10112 0 56 56 0 10-112 0z"
              />
            </svg>
          </span>
        </span>
        <span>
          List
        </span>
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        type="radio"
      />
      <div
        class="ant-segmented-item-label"
      >
        <span
          class="ant-segmented-item-icon"
        >
          <span
            aria-label="appstore"
            class="anticon anticon-appstore"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="appstore"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M464 144H160c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V160c0-8.8-7.2-16-16-16zm-52 268H212V212h200v200zm452-268H560c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V160c0-8.8-7.2-16-16-16zm-52 268H612V212h200v200zM464 544H160c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V560c0-8.8-7.2-16-16-16zm-52 268H212V612h200v200zm452-268H560c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V560c0-8.8-7.2-16-16-16zm-52 268H612V612h200v200z"
              />
            </svg>
          </span>
        </span>
        <span>
          Kanban
        </span>
      </div>
    </label>
  </div>
</div>
`;

exports[`renders components/segmented/demo/with-icon.tsx extend context correctly 2`] = `[]`;
